# useful-data-structures

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  to-do.txt
include/: collections.hpp  tree.hpp  trie.hpp
include/error_handling/: exceptions.hpp
src/: trie.cpp
tests/: CMakeLists.txt
tests/src/: trie_tests.cpp
